fix gap goal

--- a/src/css/challenges.css
+++ b/src/css/challenges.css
@@ -6,15 +6,14 @@
 .goals-list {
   display: flex;
   flex-wrap: wrap;
-  gap: 24px;
+  gap: 22px;
   row-gap: 24px;
   margin-bottom: 24px;
   text-align: center;
   justify-content: center;
 }
 .goals-list-item {
-  width: 123px;
-  min-height: 60px;
+  width: 124px;
 }
 @media only screen and (min-width: 1200px) {
   .goals-title,
